# Challenge_moteur_jeu

./: .gitignore  CMakeLists.txt  Makefile  efzgthryusvfjywrfgvrjyfewsv.txt  standalone.c  woaw
avalam-tournoi/: makefile
avalam-tournoi/joueur/: joueur1  joueur1.c  joueur2.c  joueur3.c  makefile  moteur.h
avalam-tournoi/libavalam/: avalam.h  libavalam.c  makefile
avalam-tournoi/libjoueur/: libjoueur.c  makefile  moteur.h
avalam-tournoi/moteur/: avalam.h  makefile  moteur  moteur-static  moteur.c  moteur.h  topologie.h
avalam-tournoi/tournoi/: genJoueurs.sh  joueur1-static  joueur2-static  joueur3-static
avalam-tournoi/tournoi/web/: 11.js  2.js  5.js  6.js  8.js  avalam-refreshv2.html  sendJson.js
avalam-web/: a.json  autre.json  avalam-standalone.html  data.json
libavalam-eleves/include/: topologie.h
livrable 1/diag/: Makefile  avalam.h  diag  diag.c  main.c
livrable 1/diag/diagrammes/: a.json  aaa.json  autre.json  bbbb.json  ccc.json  description.json  diag1.json  eeee.json  gggggg.json  hhhhh.json  letest.json  test.json
livrable 1/standalone/: Makefile  autre.json  diag  diag.c  libavalam.c  main.c  questions.txt  standalone.c  standalone.h  topologie.h
